--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                    <li><a href="#contact" class="button next scrolly">Get Started</a></li>
                 </ul>
             </div>
         </div>
@@ -30,14 +30,11 @@
     <!-- Main -->
     <div id="main">
 
-        <!-- One -->
-        {% include tiles.html %}
-
         <!-- Two -->
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>About Me</h2>
+                    <h2>About</h2>
                 </header>
                 <p>{{ content }}</p>
             </div>
