--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,9 @@
 	<div class="inner">
 		<section>
 			<form action="https://formspree.io/{{ site.email }}" method="POST">
+        <header class="major">
+            <h2>Sign Up</h2>
+        </header>
 				<div class="field half first">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" />
@@ -27,6 +30,52 @@
 					<span class="icon alt fa-envelope"></span>
 					<h3>Email</h3>
 					<a href="#">{{ site.email }}</a>
+				</div>
+			</section>
+      <section>
+				<div class="contact-method">
+					<span class="icon alt fa-home"></span>
+					<h3>Location</h3>
+					<span>
+          {% if site.address_link %}
+					   <a href="{{ site.street_address }}" target="_blank">
+					{% endif %}
+          {% if site.address_name %}
+					    {{ site.address_name }}<br />
+					{% endif %}
+					{% if site.street_address %}
+					    {{ site.street_address }}<br />
+					{% endif %}
+					{% if site.city %}
+					    {{ site.city }},
+					{% endif %}
+					{% if site.state %}
+					    {{ site.state }}
+					{% endif %}
+					{% if site.zip_code %}
+					    {{ site.zip_code }}<br />
+					{% endif %}
+					{% if site.country %}
+					    {{ site.country }}
+					{% endif %}
+          {% if site.address_link %}
+             </a>
+          {% endif %}
+					</span>
+				</div>
+			</section>
+      <section>
+				<div class="contact-method">
+					<span class="icon alt fa-home"></span>
+					<h3>Hours</h3>
+					<span>
+					{% if site.hours %}
+					    {{ site.hours }}<br />
+					{% endif %}
+          {% if site.hours2 %}
+					    {{ site.hours2 }}
+					{% endif %}
+					</span>
 				</div>
 			</section>
 		</section>
