--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -119,9 +119,9 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
+        <li><a href="{{ "assets/miguel_ruiz_skate_waiver.pdf" | relative_url }}" target="_blank">Safety Waiver Form</a></li>
 				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 				<li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a></li>
-
 			</ul>
 		</div>
 	</footer>
