--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,21 +5,22 @@
 			<form action="https://formspree.io/{{ site.email }}" method="POST">
         <header class="major">
             <h2>Sign Up</h2>
+            <small>*Required Field</small>
         </header>
 				<div class="field half first">
-					<label for="name">Name</label>
-					<input type="text" name="name" id="name" />
+					<label for="name">Name*</label>
+					<input type="text" name="name" id="name" required />
 				</div>
 				<div class="field half">
-					<label for="email">Email</label>
-					<input type="text" name="_replyto" id="email" />
+					<label for="email">Email*</label>
+					<input type="text" name="_replyto" id="email" required />
 				</div>
 				<div class="field">
 					<label for="message">Message</label>
 					<textarea name="message" id="message" rows="6"></textarea>
 				</div>
 				<ul class="actions">
-					<li><input type="submit" value="Send Message" class="special" /></li>
+					<li><button class="special" type="submit">Submit</button></li>
 					<li><input type="reset" value="Clear" /></li>
 				</ul>
 			</form>
@@ -29,7 +30,14 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Email</h3>
-					<a href="#">{{ site.email }}</a>
+					<a href="mailto:{{ site.email }}?subject=Skateboard Lessons" target="_blank">{{ site.email }}</a>
+				</div>
+			</section>
+      <section>
+				<div class="contact-method">
+					<span class="icon alt fa-instagram"></span>
+					<h3>Instagram</h3>
+					<a href="{{ site.instagram_url }}" target="_blank">@miguelruizskates</a>
 				</div>
 			</section>
       <section>
