--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,6 +37,7 @@
                     <h2>About</h2>
                 </header>
                 <p>{{ content }}</p>
+                <p><a href="{{ "assets/miguel_ruiz_skate_waiver.pdf" | relative_url }}" target="_blank">Safety Waiver Form</a></p>
             </div>
         </section>
 
