--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 				</div>
 				<div class="field half">
 					<label for="email">Email*</label>
-					<input type="text" name="_replyto" id="email" required />
+					<input type="email" name="_replyto" id="email" required />
 				</div>
 				<div class="field">
 					<label for="message">Message</label>
